# pydantree

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  test.yml
docs/: index.md
docs/api/: index.md
docs/grammars/: index.md  python.md  rust.md
docs/nodes/: index.md  rust.md
docs/usage/: index.md
src/pydantree/: cli.py  grammar.py  paths.py
src/pydantree/cli/: __init__.py  interfaces.py  run.py
src/pydantree/data/grammars/rust/: grammar.json
src/pydantree/grammar/: README.md  __init__.py  amend_dcg_models.py  generate.py  models.py  view.py
src/pydantree/interface/: cli.py  models.py
src/pydantree/nodes/: view.py
tests/: package_test.py
